# chessTer

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
src/chesster/: __init__.py
src/chesster/api/: __init__.py  app.py  deps.py  idempotency.py  schemas.py  settings.py
src/chesster/chess/: __init__.py  board.py
src/chesster/eval/: __init__.py  baselines.py  evaluate.py  loader.py  report.py
src/chesster/league/: __init__.py  arena.py  elo.py  gating.py  registry.py  sampler.py
src/chesster/policies/: __init__.py  base.py  hf_llm.py  llm_lora.py  net.py  ollama.py  random.py  stockfish.py
src/chesster/selfplay/: __init__.py  generator.py  record.py  runner.py
src/chesster/train/: __init__.py  bc.py  llm_rl.py  loop.py  rewards.py  rl.py
tests/: test_api_idempotency.py  test_api_leaderboard.py  test_api_legality.py  test_arena.py  test_board_utils.py  test_elo.py  test_evaluate.py  test_game_record.py  test_game_runner.py  test_gating.py  test_hf_llm_policy.py  test_llm_lora.py  test_llm_rl.py  test_registry.py  test_rewards.py  test_selfplay_generator.py
